feat: Introduce JSON-based database backup and restore functionality for categories and transactions.