@@ -2,6 +2,7 @@ package com.mx.money.service;
 
 import com.mx.money.dto.CsvImportRequest;
 import com.mx.money.dto.CsvImportResponse;
+import com.mx.money.repository.TransactionRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.beans.factory.annotation.Value;
@@ -10,25 +11,30 @@ import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Serviço de categorização de transações CSV usando Spring AI + Ollama.
- * Usa o arquivo categories.md como base de conhecimento (RAG) para
- * ajudar o LLM a identificar categorias corretas.
+ * Usa o arquivo categories.md como base de conhecimento (RAG) estática
+ * E o histórico de transações do usuário como aprendizado dinâmico (Few-Shot).
  */
 @Service
 @Slf4j
 public class CsvCategorizationService {
 
     private final ChatClient.Builder chatClientBuilder;
+    private final TransactionRepository transactionRepository;
     private final String categoriesKnowledge;
 
     public CsvCategorizationService(
             ChatClient.Builder chatClientBuilder,
+            TransactionRepository transactionRepository,
             @Value("classpath:categories.md") Resource categoriesResource) throws IOException {
         this.chatClientBuilder = chatClientBuilder;
+        this.transactionRepository = transactionRepository;
         this.categoriesKnowledge = categoriesResource.getContentAsString(StandardCharsets.UTF_8);
         log.info("Categories knowledge base loaded ({} chars)", categoriesKnowledge.length());
     }
@@ -44,13 +50,20 @@ public class CsvCategorizationService {
 
         log.info("Categorizing {} transactions with AI...", items.size());
 
-        // Monta a lista de descrições numeradas
-        StringBuilder descriptions = new StringBuilder();
+        // Busca histórico recente para aprendizado (últimos 6 meses)
+        LocalDateTime sixMonthsAgo = LocalDateTime.now().minusMonths(6);
+        List<Object[]> recentHistory = transactionRepository.findRecentCategorizations(sixMonthsAgo);
+
+        String userExamples = formatUserExamples(recentHistory);
+        log.info("Loaded {} recent user examples for context", recentHistory.size());
+
+        // Monta a lista de descrições numeradas para classificar
+        StringBuilder descriptionsToClassify = new StringBuilder();
         for (int i = 0; i < items.size(); i++) {
-            descriptions.append(i + 1).append(". ").append(items.get(i).getDescription()).append("\n");
+            descriptionsToClassify.append(i + 1).append(". ").append(items.get(i).getDescription()).append("\n");
         }
 
-        String prompt = buildPrompt(descriptions.toString());
+        String prompt = buildPrompt(descriptionsToClassify.toString(), userExamples);
         log.debug("Prompt sent to LLM:\n{}", prompt);
 
         try {
@@ -64,24 +77,42 @@ public class CsvCategorizationService {
             return parseResponse(response, items);
         } catch (Exception e) {
             log.error("Error calling Ollama for categorization", e);
-            // Fallback: retorna todos como "Outros"
+            // Fallback: retorna todos como "Outros" em caso de erro
             return items.stream()
-                    .map(item -> CsvImportResponse.builder()
-                            .date(item.getDate())
-                            .description(item.getDescription())
-                            .amount(item.getAmount())
-                            .category("Outros")
-                            .build())
-                    .toList();
+                    .map(item -> new CsvImportResponse(
+                            item.getDate(),
+                            item.getDescription(),
+                            item.getAmount(),
+                            "Outros"))
+                    .collect(Collectors.toList());
         }
     }
 
-    private String buildPrompt(String descriptions) {
+    private String formatUserExamples(List<Object[]> history) {
+        if (history.isEmpty())
+            return "";
+
+        StringBuilder sb = new StringBuilder();
+        sb.append("# EXEMPLOS DO HISTÓRICO DO USUÁRIO (Prioridade Alta)\n");
+        sb.append(
+                "Use estes exemplos como referência principal. Se uma descrição for similar, use a mesma categoria.\n\n");
+
+        for (Object[] row : history) {
+            String desc = (String) row[0];
+            String cat = (String) row[1];
+            sb.append("- \"").append(desc).append("\" -> ").append(cat).append("\n");
+        }
+        return sb.toString();
+    }
+
+    private String buildPrompt(String descriptionsToClassify, String userExamples) {
         return """
                 # TAREFA
-                Você é um classificador de transações financeiras. Classifique cada transação abaixo em UMA das categorias listadas na base de conhecimento.
+                Você é um classificador de transações financeiras. Classifique cada transação abaixo em UMA das categorias listadas na base de conhecimento ou nos exemplos do usuário.
 
                 # BASE DE CONHECIMENTO (categorias e palavras-chave)
+                %s
+
                 %s
 
                 # REGRAS
@@ -90,8 +121,9 @@ public class CsvCategorizationService {
                 3. Se a descrição não se encaixar em nenhuma categoria, use "Outros"
                 4. Considere partes das palavras (substrings). Exemplo: se "autoposto" está na categoria Transporte, então "Rxfautoposto" ou "Pgto Autoposto" também é Transporte.
                 5. Ignore prefixos comuns como "Pgto", "Compra", "Debito", "Pix", etc.
-                6. NÃO adicione explicações, comentários ou texto extra
-                7. NÃO use markdown, aspas, ou qualquer formatação
+                6. PRIORIDADE: Se a descrição for similar a um exemplo do histórico do usuário, use a categoria do histórico.
+                7. NÃO adicione explicações, comentários ou texto extra
+                8. NÃO use markdown, aspas, ou qualquer formatação
 
                 # FORMATO DA RESPOSTA (exatamente assim)
                 1. Alimentação
@@ -101,7 +133,7 @@ public class CsvCategorizationService {
                 # TRANSAÇÕES PARA CLASSIFICAR
                 %s
                 """
-                .formatted(categoriesKnowledge, descriptions);
+                .formatted(categoriesKnowledge, userExamples, descriptionsToClassify);
     }
 
     /**
@@ -116,16 +148,22 @@ public class CsvCategorizationService {
             String category = "Outros";
 
             // Tenta encontrar a linha correspondente na resposta
+            // Procura por "1. ", "1 - ", "1: "
+            String prefix = (i + 1) + "";
+
             for (String line : lines) {
                 String trimmed = line.strip();
-                // Formato esperado: "1. Categoria" ou "1 - Categoria" ou "1: Categoria"
-                if (trimmed.startsWith((i + 1) + ".") ||
-                        trimmed.startsWith((i + 1) + " ") ||
-                        trimmed.startsWith((i + 1) + "-") ||
-                        trimmed.startsWith((i + 1) + ":")) {
+                // Verifica se começa com o número seguido de pontuação
+                if (trimmed.startsWith(prefix + ".") ||
+                        trimmed.startsWith(prefix + " ") ||
+                        trimmed.startsWith(prefix + "-") ||
+                        trimmed.startsWith(prefix + ":")) {
 
                     // Remove o número e o delimitador
                     category = trimmed.replaceFirst("^\\d+[.:\\-\\s]+\\s*", "").strip();
+                    // Remove aspas extras se houver
+                    category = category.replaceAll("^\"|\"$", "");
+
                     if (category.isEmpty()) {
                         category = "Outros";
                     }
@@ -133,12 +171,11 @@ public class CsvCategorizationService {
                 }
             }
 
-            results.add(CsvImportResponse.builder()
-                    .date(item.getDate())
-                    .description(item.getDescription())
-                    .amount(item.getAmount())
-                    .category(category)
-                    .build());
+            results.add(new CsvImportResponse(
+                    item.getDate(),
+                    item.getDescription(),
+                    item.getAmount(),
+                    category));
         }
 
         log.info("Categorization complete: {} items processed", results.size());
